// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Left should render correctly when replaced 1`] = `
<View
  style={
    {
      "flexShrink": 1,
      "gap": 4,
    }
  }
>
  <View
    style={
      {
        "height": 17,
        "justifyContent": "center",
      }
    }
  >
    <Text
      allowFontScaling={false}
      numberOfLines={1}
      style={
        [
          {
            "color": "#2B1911",
            "fontFamily": "Baloo2-Regular",
            "fontSize": 16,
            "letterSpacing": 0.16,
            "lineHeight": 24,
          },
          [
            [
              {
                "fontFamily": "Baloo2-SemiBold",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 28,
              },
              {
                "color": "#9F8C82",
              },
            ],
            {
              "marginBottom": -40,
              "marginTop": -40,
            },
          ],
        ]
      }
    >
      title
    </Text>
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 6,
      }
    }
  >
    <test-file-stub
      fill="#2B1911"
      style={
        [
          {
            "height": 24,
            "width": 24,
          },
          {
            "height": 17,
            "width": 17,
          },
        ]
      }
    />
    <View
      style={
        {
          "height": 17,
          "justifyContent": "center",
        }
      }
    >
      <Text
        allowFontScaling={false}
        onPress={[Function]}
        style={
          [
            {
              "color": "#2B1911",
              "fontFamily": "Baloo2-Regular",
              "fontSize": 16,
              "letterSpacing": 0.16,
              "lineHeight": 24,
            },
            [
              [
                {
                  "color": "#7D675E",
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 14,
                  "letterSpacing": 0.14,
                  "lineHeight": 20,
                },
                {
                  "color": "#2B1911",
                  "fontFamily": "Baloo2-SemiBold",
                  "fontSize": 14,
                  "letterSpacing": 0.14,
                  "lineHeight": 22,
                  "textDecorationLine": "underline",
                },
                {
                  "width": 100,
                },
              ],
              {
                "marginBottom": -40,
                "marginTop": -40,
              },
            ],
          ]
        }
        suppressHighlighting={false}
      >
        date
      </Text>
    </View>
  </View>
</View>
`;

exports[`Left should render correctly with a title and date 1`] = `
<View
  style={
    {
      "flexShrink": 1,
      "gap": 4,
    }
  }
>
  <View
    style={
      {
        "height": 17,
        "justifyContent": "center",
      }
    }
  >
    <Text
      allowFontScaling={false}
      numberOfLines={1}
      style={
        [
          {
            "color": "#2B1911",
            "fontFamily": "Baloo2-Regular",
            "fontSize": 16,
            "letterSpacing": 0.16,
            "lineHeight": 24,
          },
          [
            [
              {
                "fontFamily": "Baloo2-SemiBold",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 28,
              },
              false,
            ],
            {
              "marginBottom": -40,
              "marginTop": -40,
            },
          ],
        ]
      }
    >
      title
    </Text>
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 6,
      }
    }
  >
    <View
      style={
        {
          "height": 17,
          "justifyContent": "center",
        }
      }
    >
      <Text
        allowFontScaling={false}
        onPress={[Function]}
        style={
          [
            {
              "color": "#2B1911",
              "fontFamily": "Baloo2-Regular",
              "fontSize": 16,
              "letterSpacing": 0.16,
              "lineHeight": 24,
            },
            [
              [
                {
                  "color": "#7D675E",
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 14,
                  "letterSpacing": 0.14,
                  "lineHeight": 20,
                },
                false,
                false,
              ],
              {
                "marginBottom": -40,
                "marginTop": -40,
              },
            ],
          ]
        }
        suppressHighlighting={true}
      >
        date
      </Text>
    </View>
  </View>
</View>
`;

exports[`Left should render correctly with title, icon and date 1`] = `
<View
  style={
    {
      "flexShrink": 1,
      "gap": 4,
    }
  }
>
  <View
    style={
      {
        "height": 17,
        "justifyContent": "center",
      }
    }
  >
    <Text
      allowFontScaling={false}
      numberOfLines={1}
      style={
        [
          {
            "color": "#2B1911",
            "fontFamily": "Baloo2-Regular",
            "fontSize": 16,
            "letterSpacing": 0.16,
            "lineHeight": 24,
          },
          [
            [
              {
                "fontFamily": "Baloo2-SemiBold",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 28,
              },
              false,
            ],
            {
              "marginBottom": -40,
              "marginTop": -40,
            },
          ],
        ]
      }
    >
      title
    </Text>
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 6,
      }
    }
  >
    <test-file-stub
      fill="#888"
      style={
        [
          {
            "height": 24,
            "width": 24,
          },
          {
            "height": 17,
            "width": 17,
          },
        ]
      }
    />
    <View
      style={
        {
          "height": 17,
          "justifyContent": "center",
        }
      }
    >
      <Text
        allowFontScaling={false}
        onPress={[Function]}
        style={
          [
            {
              "color": "#2B1911",
              "fontFamily": "Baloo2-Regular",
              "fontSize": 16,
              "letterSpacing": 0.16,
              "lineHeight": 24,
            },
            [
              [
                {
                  "color": "#7D675E",
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 14,
                  "letterSpacing": 0.14,
                  "lineHeight": 20,
                },
                false,
                {
                  "width": 100,
                },
              ],
              {
                "marginBottom": -40,
                "marginTop": -40,
              },
            ],
          ]
        }
        suppressHighlighting={true}
      >
        date
      </Text>
    </View>
  </View>
</View>
`;
